--- a/psf2stitchfont/src/dune
+++ b/psf2stitchfont/src/dune
@@ -4,10 +4,21 @@
  (libraries cmdliner bos fmt psf2stitchfont)
 )
 
+(library
+ (name sqlite)
+ (modules sqlite)
+ (libraries bos caqti caqti-driver-sqlite3 caqti-lwt lwt psf2stitchfont sqlite3 stitchy)
+)
+
 (executable
  (public_name psf2sqlite)
  (modules psf2sqlite)
- (libraries bos caqti caqti-driver-sqlite3 caqti-lwt cmdliner lwt psf2stitchfont sqlite3 stitchy)
+ (libraries cmdliner psf2stitchfont sqlite)
+)
+(executable
+ (public_name otf2sqlite)
+ (modules otf2sqlite)
+ (libraries cmdliner psf2stitchfont sqlite)
 )
 (executable
  (public_name readotf)
@@ -22,7 +33,6 @@
  (action
   (progn
    (run readpsf fonts/Bm437_ATI_8x8_6.fnt.psf)
-   (run readpsf fonts/Bm437_IBM_VGA9-2x_12.fnt.psf)
    (run readotf fonts/Bm437_AMI_EGA_8x8.otb)
 )))
 
@@ -31,16 +41,19 @@
  (deps (source_tree fonts))
  (action
   (progn
-   (run psf2sqlite --name sqlitetestfont --db /tmp/fonts.sqlite3 fonts/Bm437_ATI_8x8_6.fnt.psf)
+   (run otf2sqlite --debug --name sqlitetestfont --db /tmp/fonts.sqlite3 fonts/BmPlus_IBM_EGA_8x8.otb)
    (run c64stitch --font sqlitetestfont --db /tmp/fonts.sqlite3 -o dosbutts.json
-"┏┓
-┃┃╱╲ in
-┃╱╱╲╲ this
-╱╱╭╮╲╲house
-▔▏┗┛▕▔ we
-╱▔▔▔▔▔▔▔▔▔▔╲
+
+"┌┐
+││/\\ in
+│//\\\\ this
+//┌┐\\\\ house
+‾│└┘│‾ we
+/‾‾‾‾‾‾‾‾‾\\
 handle unicode
-╱╱┏┳┓╭╮┏┳┓ ╲╲
-▔▏┗┻┛┃┃┗┻┛▕")
+//┌┬┐┌┐┌┬┐\\\\
+‾│└┴┘││└┴┘│‾
+")
+
    (run notty_canvas dosbutts.json)
   )))
