--- a/stitchy/lib/dune
+++ b/stitchy/lib/dune
@@ -10,7 +10,7 @@
  (name transformers)
  (public_name stitchy.transformers)
  (modules transformers)
- (libraries imagelib imagelib-unix stitchy)
+ (libraries imagelib  stitchy)
  (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
 )
 
