--- a/pattern/src/dune
+++ b/pattern/src/dune
@@ -1,4 +1,5 @@
 (executable
+ (package stitchcraft)
  (public_name stitchpattern)
  (modules stitchpattern)
  (libraries pattern cmdliner camlpdf stitchy)
