--- a/psf2stitchfont/lib/dune
+++ b/psf2stitchfont/lib/dune
@@ -1,5 +1,5 @@
 (library
- (public_name psf2stitchfont)
+ (name psf2stitchfont)
  (libraries bos cstruct ppx_cstruct otfm stitchy uutf uunf)
  (preprocess (pps ppx_cstruct))
 )
