--- a/c64say/lib/dune
+++ b/c64say/lib/dune
@@ -1,4 +1,4 @@
 (library
- (public_name c64say)
+ (name c64say)
  (libraries astring caqti caqti-driver-sqlite3 caqti-lwt lwt stitchy uucp uunf uunf.string uutf)
 )
