--- a/stitchy/lib/dune
+++ b/stitchy/lib/dune
@@ -1,23 +1,5 @@
 (library
  (name stitchy)
- (public_name stitchy)
- (modules dMC rGB symbol thread types)
- (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 fmt)
- (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
-)
-
-(library
- (name transformers)
- (public_name stitchy.transformers)
- (modules transformers)
- (libraries imagelib  stitchy)
- (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
-)
-
-(library
- (name files)
- (public_name stitchy.files)
- (modules files)
- (libraries stitchy yojson)
+ (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 fmt imagelib)
  (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
 )
