--- a/fontreader/src/dune
+++ b/fontreader/src/dune
@@ -24,3 +24,15 @@
  (modules otf2sqlite)
  (libraries cmdliner fontreader sqlite)
 )
+
+(rule
+ (alias runtest)
+ (deps (source_tree fonts) readotf.exe)
+ (action
+  (progn
+  (run readotf ./fonts/BmPlus_ToshibaSat_8x8.otb)
+  (run readotf ./fonts/BmPlus_IBM_VGA_8x14.otb)
+  (run readotf ./fonts/BmPlus_IBM_VGA_8x16.otb)
+  (run readotf ./fonts/BmPlus_ToshibaSat_9x8.otb)
+  (run readotf ./fonts/BmPlus_IBM_VGA_9x16.otb)
+)))
