--- a/pattern/src/dune
+++ b/pattern/src/dune
@@ -11,7 +11,7 @@
  (deps test/stitch.json)
  (action
   (progn
-   (run stitchpattern -p20 -o ocaml.pdf -i test/stitch.json)
+   (run stitchpattern -w "TEST IMAGE" -p20 -o ocaml.pdf -i test/stitch.json)
    (run pdfinfo ocaml.pdf)
    (run evince ocaml.pdf)
 )))
