move readotf code to test directory

--- a/fontreader/test/dune
+++ b/fontreader/test/dune
@@ -1,6 +1,12 @@
 (executable
  (name test)
+ (modules test)
  (libraries alcotest cmdliner bos fontreader fmt otfm stitchy)
+)
+(executable
+ (public_name readotf)
+ (modules readotf)
+ (libraries cmdliner bos fmt fontreader)
 )
 
 (rule
