Revert "remove some stray opams"
This reverts commit 5d663b7d9f238fc0c8d0a67c3a7e10276b1643d2.

--- a/pattern/src/dune
+++ b/pattern/src/dune
@@ -1,5 +1,6 @@
 (executable
- (name stitchpattern)
+ (package stitchcraft)
+ (public_name stitchpattern)
  (modules stitchpattern)
  (libraries pattern cmdliner camlpdf stitchy)
 )
