all stitches are cross stitches! this is cross stitch!

--- a/patreader/src/dune
+++ b/patreader/src/dune
@@ -1,10 +1,4 @@
 (executable
   (public_name patreader)
-  (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix patreader)
+  (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix patreader stitchy)
   )
-
-(rule
- (alias runtest)
- (deps test/1355443710113.pat)
- (action (run patreader test/1355443710113.pat))
-)
