make patterns horrific with this one weird trick

--- a/patreader/src/dune
+++ b/patreader/src/dune
@@ -1,4 +1,4 @@
 (executable
   (public_name patreader)
-  (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix patreader stitchy)
+  (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix patreader rresult stitchy)
   )
