--- a/patreader/src/dune
+++ b/patreader/src/dune
@@ -1,4 +1,4 @@
 (executable
-  (public_name patreader)
+  (public_name pat2stitchy)
   (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix patreader rresult stitchy)
   )
