use xdgopen instead of evince for test pdf viewing

--- a/pattern/src/dune
+++ b/pattern/src/dune
@@ -12,5 +12,5 @@
   (progn
    (run stitchpattern -w "TEST IMAGE" -p20 -o ocaml.pdf -i test/stitch.json)
    (run pdfinfo ocaml.pdf)
-   (run evince ocaml.pdf)
+   (run xdg-open ocaml.pdf)
 )))
