--- a/notty_canvas/src/dune
+++ b/notty_canvas/src/dune
@@ -1,5 +1,5 @@
 (executable
  (public_name notty_canvas)
  (name notty_canvas)
- (libraries cmdliner notty notty.lwt canvas stitchy estimator)
+ (libraries cmdliner notty notty.lwt canvas stitchy estimator inotify inotify.lwt)
 )
