embellish: add fenceposts, infer side as rotated top
Many repeating border patterns have a fencepost-and-fence style of
repetition, where there is some "overlapping" element between
iterations. Support this with an optional "fencepost" argument.

Remove support for distinct `side` patterns, and from now on assume
that all borders are rotated versions of the top. (it was annoying to
think about specifying two fenceposts, and all my test patterns have a
side.pattern that's just a rotated top.pattern that I have to make
separately for no good reason)

--- a/embellish/src/dune
+++ b/embellish/src/dune
@@ -21,10 +21,13 @@
 (data_only_dirs test)
 
 (rule (alias runtest)
- (deps test/corner.json test/center.json test/border.json)
+ (deps (glob_files test/*))
  (action
   (progn
    (run repeat_corner -o repeated_corners.json --border test/border.json --center test/center.json --corner test/corner.json)
    (run stitchpattern -w "TEST IMAGE from https://github.com/yomimono/stitchcraft" -o repeated_corners.pdf -i repeated_corners.json)
    (run xdg-open repeated_corners.pdf)
+   (run embellish_stitch --fencepost=test/fencepost.pattern --corner=test/top.pattern --top=test/top.pattern --center=test/center.pattern -o fencepost.pattern)
+   (run stitchpattern -w "TEST IMAGE from https://github.com/yomimono/stitchcraft" -o fencepost.pdf -i fencepost.pattern)
+   (run xdg-open fencepost.pdf)
 )))
