--- a/deploytron/src/dune
+++ b/deploytron/src/dune
@@ -1,10 +1,11 @@
 (executable
   (name get)
+  (modules get)
   (libraries etsy bos cmdliner cohttp-lwt-unix fpath mirage-random mirage-crypto tls uri)
 )
 
-(rule (alias runtest)
-      (action
-        (progn
-          (run %{exe:get.exe})
-          )))
+(executable
+  (name list)
+  (modules list)
+  (libraries etsy bos cmdliner cohttp-lwt-unix fpath mirage-random mirage-crypto tls uri)
+)
