--- a/fontreader/lib/dune
+++ b/fontreader/lib/dune
@@ -1,5 +1,5 @@
 (library
  (name fontreader)
- (libraries bos cstruct ppx_cstruct otfm stitchy uutf uunf)
+ (libraries angstrom bos cstruct ppx_cstruct otfm stitchy uutf uunf)
  (preprocess (pps ppx_cstruct))
 )
