--- a/stitchcraft.opam
+++ b/stitchcraft.opam
@@ -16,6 +16,7 @@ depends: [
   "bos" {>= "0.2.0"}
   "camlpdf" {>= "2.3"}
   "caqti" {>= "1.8.0"}
+  "caqti-driver-postgresql" {>= "1.8.0"}
   "caqti-lwt" {>= "1.2.0"}
   "cmdliner" {>= "1.1.0"}
   "cstruct" {>= "5.0.0"}
@@ -27,6 +28,7 @@ depends: [
   "otfm" {>= "0.4.0"}
   "ppx_cstruct" {>= "5.0.0"}
   "ppx_deriving.eq" {>= "5.0"}
+  "ppx_deriving_yojson" {>= "3.6.0"}
   "ppx_deriving_yojson.runtime" {>= "3.6.0"}
   "rresult" {>= "0.6.0"}
   "uucp" {>= "13.0.0"}
