--- a/stitchcraft.opam
+++ b/stitchcraft.opam
@@ -25,6 +25,7 @@ depends: [
   "cstruct" {>= "5.0.0"}
   "fmt" {>= "0.8.0"}
   "imagelib" {>= "20200929"}
+  "inotify" {>= "2.0"}
   "lwt" {>= "5.0.0"}
   "notty" {>= "0.2.2"}
   "otfm" {>= "0.4.0"}
