normalize to textstitch, not textsay

--- a/textstitch/src/dune
+++ b/textstitch/src/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name textstitch)
- (libraries textsay astring cmdliner stitchy uutf pgx pgx_lwt_unix)
+ (libraries textstitch astring cmdliner stitchy uutf pgx pgx_lwt_unix)
 )
