--- a/patreader/src/dune
+++ b/patreader/src/dune
@@ -1,5 +1,6 @@
 (executable
   (public_name pat2stitchy)
+  (modules pat2stitchy)
   (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix patreader rresult stitchy)
   )
 
