gonna need some bos

--- a/patbrowser/src/dune
+++ b/patbrowser/src/dune
@@ -1,5 +1,5 @@
 (executable
  (public_name patbrowser)
  (name patbrowser)
- (libraries cmdliner notty notty.lwt patbrowser_canvas stitchy estimator)
+ (libraries bos cmdliner notty notty.lwt patbrowser_canvas stitchy estimator)
 )
