--- a/src/dune
+++ b/src/dune
@@ -1,5 +1,9 @@
 (executable
   (public_name stitchcraft)
   (name stitchcraft)
-  (libraries cmdliner stitchcraft.assemble stitchcraft.primitives stitchy)
+  (libraries cmdliner 
+             stitchcraft.assemble
+             stitchcraft.db
+             stitchcraft.primitives
+             stitchcraft.textstitch stitchy)
 )
