--- a/primitives/src/dune
+++ b/primitives/src/dune
@@ -1,17 +1,4 @@
 (executables
- (public_names backstitch empty piece rect rotate)
+ (public_names rotate)
  (libraries cmdliner primitives stitchy yojson)
-)
-
-(rule
- (alias runtest)
- (action (progn
-  (with-stdout-to backstitch.pattern (run %{exe:backstitch.exe} "0,0/1,1"))
-  (with-stdout-to empty.pattern (run %{exe:empty.exe} 61 64))
-  (with-stdout-to vertical_line.pattern (run %{exe:rect.exe} 1 66))
-  (with-stdout-to horizontal_line.pattern (run %{exe:rect.exe} 61 1))
-  (with-stdout-to smol_horizontal_line.pattern (run %{exe:piece.exe} -i horizontal_line.pattern 0 0 5 1))
-  (run hcat -o center.pattern backstitch.pattern horizontal_line.pattern empty.pattern horizontal_line.pattern)
-  (run vcat -o box.pattern vertical_line.pattern center.pattern vertical_line.pattern)
- ))
 )
