--- a/fontreader/lib/dune
+++ b/fontreader/lib/dune
@@ -1,4 +1,5 @@
 (library
+ (public_name stitchcraft.fontreader)
  (name fontreader)
  (libraries angstrom bos cstruct ppx_cstruct otfm stitchy uutf uunf)
  (preprocess (pps ppx_cstruct))
