--- a/patreader/lib/dune
+++ b/patreader/lib/dune
@@ -1,4 +1,5 @@
 (library
+  (public_name stitchcraft.patreader)
   (name patreader)
-  (libraries angstrom fmt)
+  (libraries angstrom fmt rresult stitchy)
 )
