the only good border is a decorative border

--- a/src/dune
+++ b/src/dune
@@ -7,6 +7,7 @@
              inotify.lwt
              notty.lwt
              stitchcraft.assemble
+             stitchcraft.border
              stitchcraft.db
              stitchcraft.estimator
              stitchcraft.fontreader
